# external-polymorphism-demo

./: CMakeLists.txt  main.cpp  shapes.h
test/: test.cpp
